# hso_dy

./: .clang-tidy.bak  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile-v0  Makefile  README.md  hso.imp
.github/workflows/: ci.yml
assets/data/CDFI_ZPT_1999/: HEPData-ins505738-v1-Table_1.csv
assets/data/CMS/: HEPData-ins941555-v1-Table_2.csv
assets/data/D0I_ZPT_1999/: HEPData-ins503361-v1-Table_1.csv
assets/data/E605/: HEPData-ins302822-v1-Table_21.csv
assets/data/E772/: HEPData-ins372414-v1-Table_5.csv
cmake/: HSODependencyFinder.cmake  HSODependencyLinker.cmake  HSOLayout.cmake
data/CDFII_ZPT_2012/: HEPData-ins1124333-v1-Table_2.csv
data/CDFI_ZPT_1991/: HEPData-ins322634-v1-Table_1.csv
data/D0II_ZPT_2008/: HEPData-ins769689-v1-Table_1.csv
data/E288/: E288_400_11-12.dat.empty
data/E605/: HEPData-ins302822-v1-Table_17.csv  HEPData-ins302822-v1-Table_18.csv  HEPData-ins302822-v1-Table_19.csv  HEPData-ins302822-v1-Table_20.csv  arrange.sh  arrange2.sh
data/E772/: HEPData-ins372414-v1-Table_6.csv  arrange.sh
doc/: README  compile_info.txt
docs/: .README.md.kate-swp  README-new.md  README.md  compile_info.md  dependencies_info.md  dependencies_info.txt  docker.md  global_dependency_registry.md  guide.md  taxonomy.md
docs/internal/: global_dependency_registry-v1.md  global_dependency_registry-v2  hose_clean_cmake.md  plan.md  tables.md
gnufiles/: .format4_pdf.gnu  .gnu_script_stat_1.gnu  cov.gnu  plot_fit_E605_linear.gnu
hso_engine/: .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile
hso_engine/cmake/: HSOLayout.cmake
hso_engine/devtools/: hso_build_docker.sh  hso_build_local.sh  hso_check_iwyu.sh  hso_check_lib_path.sh  hso_gen_iwyu_mappings.sh  hso_iwyu_mappings.imp  sa_test_S1-1.sh
hso_engine/docs/: README.md  build_info.md  dependencies_info.md  development_notes.md  global_dependency_registry.md  guide.md
hso_engine/include/hso/: FCN.h  WDY_hso.h  behavior.h  csec_DY_css_hso_integrands_cuba.h  data_class.h  data_loader.h  experiment_class.h  experiment_loader.h  gsl_settings.h  objects_data.h  objects_data_theory_stat.h  objects_stat.h  objects_theory.h  output_dir_tree.h  pqcd.h  read_data.h  read_kin.h  stat_class.h  theory_class.h  utilities.h
hso_engine/programs/: HSODrellYanFitter.cpp  HSODrellYanHessian.cpp
hso_engine/src/: CSkernel.cpp  FCN.cpp  behavior.cpp  csec_DY_css_hso_integrands_cuba.cpp  data_class.cpp  data_loader.cpp  evo.cpp  experiment_class.cpp  experiment_loader.cpp  models_fcn-tmd-gaussx1-CS-gauss.cpp  objects_data.cpp  objects_data_theory_stat.cpp  objects_stat.cpp  objects_theory.cpp  output_dir_tree.cpp  pdf_cutoff_from_msbar.cpp  read_data.cpp  read_kin.cpp  read_para.cpp  scale_setting.cpp  stat_class.cpp  theory_class.cpp  utilities.cpp
hso_engine/tests/: helpers.sh
hso_engine/tests/static_analysis/: README.md  get_global_functions.sh  sa_test_B3-1.sh  sa_test_S1-1.sh  sa_test_S3-1.sh  update_registry_globals.sh
hso_engine/tests/static_analysis/baseline/Debug/: global_registry.sym  global_registry_app.sym
hso_engine/tests/static_analysis/baseline/RelWithDebInfo/: global_registry.sym  global_registry_app.sym
hso_engine/tests/static_analysis/baseline/Release/: global_registry.sym  global_registry_app.sym
hso_engine/tests/system_validation/expected/sv_test_dat_files/E288_control_dat_files/input/: kin_drellyan.input  para_hso.input
hso_engine/tests/system_validation/expected/sv_test_dat_files/E288_control_dat_files/stat/E288/: E288_200_4-5.stat  E288_200_5-6.stat  E288_200_6-7.stat  E288_200_7-8.stat  E288_200_8-9.stat
hso_engine/tests/system_validation/expected/sv_test_dat_files/E288_control_dat_files/status/: para_hso.input
hso_engine/tests/system_validation/expected/sv_test_fit_fast/E288_control_fast/stat/E288/: E288_200_4-5.stat  E288_200_7-8.stat  E288_300_11-12.stat  E288_300_7-8.stat  E288_400_11-12.stat  E288_400_12-13.stat  E288_400_7-8.stat
hso_engine/tests/system_validation/input/sv_test_fit_fast/: para_hso.input
hso_engine/tests/system_validation/scripts/: sv_test_dat_files.sh  sv_test_fit_fast.sh
include/: .FCN.h.kate-swp  FCN.h  WDY_hso.h  collinear_factorization.h  cuba_settings.h  data_class.h  debug.h  evo.h  gnuplot_script_names.h  math_functions.h  objects_data.h  objects_stat.h  objects_theory.h  pdf_cutoff_from_msbar.h  pqcd.h  read_data.h  read_para.h  scale_setting.h  stat_class.h  theory_class.h  tmdPDF.h  utilities.h
include/hso/: CSkernel.h  math_functions.h  objects_data.h  objects_stat.h  pqcd.h
input/: para_hso.input
programs/: HSODrellYanFitter.cpp  HSODrellYanHessian.cpp  fit_fixed_target_DY.c  hessian_DY_hso.c
run/input/: .kin_drellyan_check_cubacores.input  kin_drellyan.input  para_hso.input
run/scripts/: commands.sh  run_fitter.sh  run_fitter_docker.sh  run_hessian_docker.sh
run/scripts/.gnufiles/: plot_fit_E288_linear.gnu  plot_fit_E605_linear.gnu
run/scripts/gnufiles/: .format_pdf.gnu  plot_fit_E288_linear.gnu  plotfix
scripts/: build_docker_image.sh  check_cubacores.sh  commands.sh  compile.sh  hso_mapping_generator.sh  run_fit_fixed_target_DY.sh  test_fit_fixed_target_DY.sh
scripts/gnufiles/: .format2_pdf.gnu  .format3.gnu  eigen.gnu
src/: CSkernel.cpp  FCN.cpp  WDY_hso.cpp  behavior.cpp  collinear_factorization.cpp  csec_DY_css_hso_integrands_cuba.cpp  data_class.cpp  evo.cpp  math_functions.cpp  models_fcn-tmd-gaussx1-CS-gauss.cpp  models_fcn-tmd-gaussx2-CS-gauss.cpp  objects_data.cpp  objects_stat.cpp  objects_theory.cpp  pdf_cutoff_from_msbar.cpp  pqcd.cpp  read_data.cpp  read_kin.cpp  read_para.cpp  scale_setting.cpp  stat_class.cpp  theory_class.cpp  tmdPDF.cpp  utilities.cpp
tests/: env.sh  helpers.sh
tests/static_analysis/: get_global_functions.sh  make_global_registries.sh  sa_test_B1-B2-1.sh  sa_test_B1-B2.sh  sa_test_B3-1.sh  sa_test_B3.sh  sa_test_S1-1.sh  sa_test_S2-1.sh  sa_test_S3-1.sh  sa_test_S5-1.sh  update_registry_globals.sh
tests/system_validation/scripts/: sv_test_fit_fast.sh
tests/system_validation/sv_test_fit_fast/: run.sh
(+178 files in other folders)
